# sf-web-api

./: .gitignore  README.md  all_funds.py  fund.py  holding.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-eb.yml
app/: db.py  main.py  s3.py
app/models/: all_funds.py  all_holdings.py  all_portfolios.py  benchmark.py  covariance_matrix.py  fund.py  holding.py  holdings.py  portfolio.py  top_positions.py
app/routers/: all_funds.py  all_holdings.py  all_portfolios.py  benchmark.py  covariance_matrix.py  fund.py  holding.py  holdings.py  portfolio.py  top_positions.py
app/services/: all_funds.py  all_holdings.py  all_portfolios.py  benchmark.py  covariance_matrix.py  fund.py  holding.py  holdings_service.py  portfolio.py  top_positions.py
